--- a/tsos.css
+++ b/tsos.css
@@ -16,12 +16,6 @@ font-size: 1.25em;
 float:right;
 }
 
-#divLog1 {
-    border-style: solid;
-    border-width: 1px;
-    border-color: red;
-}
-
 #divMain{
   margin: 0 auto;
   width: 970px;
@@ -35,15 +29,16 @@ float:right;
 }
 .hostLogListItem{
   font-size: 1.1em;
-  border-style: solid;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom-style: solid;
   border-width: 1px;
   border-color: #008CBA;
+  padding: 10px;
 }
 /* Let's get this party started */
 ::-webkit-scrollbar {
     width: 8px;
-}
- 
+ }
 /* Track */
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0); 
@@ -58,6 +53,7 @@ float:right;
     background: rgba(0,0,0,0); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0); 
 }
+
 ::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(0,0,0,0.0); 
 }
